<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TampilanHasil">
    <TextView
        android:id="@+id/tvSelamatDatang"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat"/>
    <TextView
        android:id="@+id/tvTipeMember"
        android:layout_below="@id/tvSelamatDatang"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TipeMember"/>
    <TextView
        android:id="@+id/tvTransaksi"
        android:layout_below="@id/tvTipeMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaksi"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tvKodeBarangView"
        android:layout_below="@id/tvTransaksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/KodeBarangView"/>
    <TextView
        android:id="@+id/tvNamaBarangView"
        android:layout_below="@id/tvKodeBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NamaBarangView"/>
    <TextView
        android:id="@+id/tvJumlahBarangView"
        android:layout_below="@id/tvNamaBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/KodeBarangView"/>
    <TextView
        android:id="@+id/tvHargaBarangView"
        android:layout_below="@id/tvJumlahBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Harga"/>
    <TextView
        android:id="@+id/tvTotalHargaView"
        android:layout_below="@id/tvHargaBarangView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TotalHargaView"/>
    <TextView
        android:id="@+id/tvDiscountView"
        android:layout_below="@id/tvTotalHargaView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DiscView"/>
    <TextView
        android:id="@+id/tvDiscountMemberView"
        android:layout_below="@id/tvDiscountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DiscMemberView"/>
    <TextView
        android:id="@+id/tvJumlahBayarView"
        android:layout_below="@id/tvDiscountMemberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/JumlahBayarView"/>
    <TextView
        android:id="@+id/tvPenutup"
        android:layout_below="@id/tvJumlahBayarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Penutup"/>
    <Button
        android:id="@+id/btnPrintNota"
        android:layout_below="@id/tvPenutup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/printNota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>



</RelativeLayout>